# android-tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  platform_tools_version.h.in  version.h.in
.github/workflows/: build.yml  release-fastboot.yml  release-macos.yml
completions/: CMakeLists.txt  README.md
completions/bash/: CMakeLists.txt  adb.in  fastboot.in
completions/zsh/: CMakeLists.txt  adb.in  fastboot.in
docker/: Dockerfile
patches/adb/: 0001-Don-t-use-the-internal-glibc-header-sys-cdefs.h.patch  0002-adb-disable-mdns-transport-support.patch  0003-adb-include-missing-headers.patch  0003-fdevent-missing-atomic-include.patch  0004-Define-clang-only-nullability-specifiers-when-__clan.patch  0005-Include-libusb-1.0-libusb.h-instead-of-libusb-libusb.patch  0006-Include-string.h-in-various-file-missing-it.patch  0007-adb-Fix-unknown-__xx_write-member-in-std-ostream.patch  0007-adb.cpp-fix-warning-regarding-execl-3-invocation.patch  0008-adb-Disable-bonjour-check.patch  0008-usb_linux.cpp-include-sys-sysmacros.h-for-minor-majo.patch  0009-adb-Reduce-fallback-size-for-_SC_GETPW_R_SIZE_MAX.patch  0010-sysdeps-don-t-over-eager-constexpr.patch  0011-Don-t-include-version.h.patch  0012-Include-cstring-in-various-file-missing-it.patch  0013-adb-disable-fastdeploy-support.patch  0014-include-climits-where-necessary-for-INT_MAX.patch  0015-types.h-Fix-ambiguous-reference-to-weak_ptr.patch  0016-adb-disable-mDNS.patch  0017-adb_wifi-remove-mDNS.patch  0018-pairing_auth-include-cstring-for-memcpy.patch  0019-adb_mdns-Don-t-use-_Nonnull.patch  0020-Fix-compilation-with-libusb-1.0.24.patch  0021-Correct-for-XDG-base-directory-on-Linux.patch  0021-fix-build-on-gcc.patch  0021-tls-include-functional.patch  0022-tls-include-functional.patch  0023-Update-usage-of-usbdevfs_urb-to-match-new-kernel-UAP.patch  0024-Add-explicit-constructor-for-fdevent_event.patch  0024-adb-include-headers.patch  0025-Add-explicit-import-for-algorithm.patch  0026-Drop-compile-static-check.patch  0027-Add-support-for-ANDROID_USER_HOME-env-var.patch  0027-Address-reference-to-local-binding-build-error.patch  0027-Make-legacy-USB-driver-default-on-Linux.patch  0028-Migrate-to-fmt-format.patch
patches/base/: 0001-LoadedArsc-un-const-T-in-std-vector-T.patch  0002-PosixUtils-don-t-use-reserved-name-std-out-err-for-v.patch  0003-AssetManager2-Align-creation-of-FindEntryResult-with.patch  0003-nullptr_t-is-std-namespace.patch  0004-Move-Theme-Entry-type-definition-up-before-it-is-use.patch
patches/boringssl/: 0001-Fix-mismatch-between-header-and-implementation-of-bn_sqr_comba8.patch  0001-add-necessary-condition-for-risc-v.patch  0001-boringssl-Add support for loongarch.patch  0001-boringssl-Workaround-compiler-error-with-gcc-14-and-.patch  0002-Use-an-unsized-helper-for-truncated-SHA-512-variants.patch  0003-Fix-unnecessarily-direction-specific-tests-in-cipher_tests.txt.patch  0004-Test-empty-EVP_CIPHER-inputs-and-fix-exact-memcpy-overlap.patch  0005-Make-words-in-crypto-fipsmodule-modes-actually-words.patch  0006-Move-load-store-helpers-to-crypto-internal.h.patch  0007-Fold-ripemd-internal.h-into-ripemd.c.patch  0008-Pull-HASH_TRANSFORM-out-of-md32_common.h.patch  0009-Make-md32_common.h-single-included-and-use-an-unsized-helper-for-SHA-256.patch  0010-Fix-array-parametes-warnings.patch  0011-Silence-a-GCC-false-positive-warning.patch  0012-Add-support-for-RISC-V-64-bit-architecture.patch  0012-CMakeLists.txt-Disable-Werror-by-default.patch
patches/core/: 0001-Don-t-use-the-internal-glibc-header-sys-cdefs.h.patch  0001-Fix-inclusion-of-stdatomic.h-with-g.patch  0002-Fix-inclusion-of-stdatomic.h-with-g.patch  0002-adb-disable-mdns-transport-support.patch  0002-group_member-is-a-nonstandard-GNU-extension.patch  0003-fdevent-missing-atomic-include.patch  0003-group_member-is-a-nonstandard-GNU-extension.patch  0003-socket.h-include-sys-select.h-for-fd_set-used-in-soc.patch  0004-Fix-inclusion-of-stdatomic.h-with-g.patch  0004-fastboot-make-mke2fs_path-configurable.patch  0004-getprogname-3-is-usually-only-defined-on-BSDs.patch  0005-fix-initializer-element-is-not-constant-error-when-b.patch  0005-group_member-is-a-nonstandard-GNU-extension.patch  0005-libcutils-include-sys-select.h-for-timeval.patch  0006-Define-clang-only-nullability-specifiers-when-__clan.patch  0006-Don-t-include-version.h.patch  0006-getprogname-3-is-usually-only-defined-on-BSDs.patch  0007-Include-cstring-in-various-file-missing-it.patch  0007-Include-libusb-1.0-libusb.h-instead-of-libusb-libusb.patch  0007-fix-initializer-element-is-not-constant-error-when-b.patch  0008-Define-clang-only-nullability-specifiers-when-__clan.patch  0008-Quote-ADB_VERSION-in-adb.cpp.patch  0008-Vector-don-t-assign-to-const-object.patch  0009-Don-t-use-the-internal-glibc-header-sys-cdefs.h.patch  0009-Include-libusb-1.0-libusb.h-instead-of-libusb-libusb.patch  0009-Use-glibc-s-gettid-when-using-glibc-2.30.patch  0009-socket.h-include-sys-select.h-for-fd_set-used-in-soc.patch  0010-Correct-version-in-which-gettid-was-introduced-to-gl.patch  0010-Define-clang-only-nullability-specifiers-when-__clan.patch  0010-Don-t-use-the-internal-glibc-header-sys-cdefs.h.patch  0010-Quote-FASTBOOT_VERSION-in-fastboot.cpp.patch  0010-socket.h-include-sys-select.h-for-fd_set-used-in-soc.patch  0011-Correct-version-in-which-gettid-was-introduced-to-gl.patch  0011-Include-string.h-in-various-file-missing-it.patch  0011-core-include-missing-headers.patch  0011-fastboot-don-t-die-if-can-t-parse-boot-part-size.patch  0011-fix-implicit-instantiation-of-undefined-template.patch  0012-Add-explicit-import-for-algorithm.patch  0012-fastboot-make-mke2fs_path-configurable.patch  0012-libutils-Fix-missing-definition-of-shared_ptr-and-un.patch  (+29 more)
patches/e2fsprogs/: 0001-linux-types.h-seem-to-already-define-__bitwise.patch  0001-misc-fix-missing-variable-names-in-function-prototyp.patch  0001-sparse_io.c-Fix-format-string.patch  0002-create_inode-don-t-define-copy_file_range-twice.patch  0002-linux-types.h-seem-to-already-define-__bitwise.patch
snap/: snapcraft.yaml
(+36 files in other folders)
